--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,14 @@
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="assets/css/dropbox-clone.css" rel="stylesheet" />
 
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase.js" defer></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js" defer></script> -->
+
   <script src="./src/controller/Controller.js" defer></script>
   <script src="./src/index.js" defer></script>
 </head>
